[gd_scene load_steps=46 format=2]

[ext_resource path="res://Platformer Controller/Player.gd" type="Script" id=1]
[ext_resource path="res://Platformer Controller/fixed gon sprites.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=35]
extents = Vector2( 4.77427, 13.9494 )

[sub_resource type="Curve" id=44]
_data = [ Vector2( 0.0074074, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.563636 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=45]
colors = PoolColorArray( 0.729412, 0.729412, 0.729412, 0.160784, 1, 1, 1, 0 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 100, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 200, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 300, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 600, 100, 100, 100 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 600, 100, 100, 100 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 700, 100, 100, 100 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 900, 100, 100, 100 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 1000, 100, 100, 100 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 400, 100, 100, 100 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 2 )
region = Rect2( 500, 100, 100, 100 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 2 )
region = Rect2( 200, 200, 100, 100 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 2 )
region = Rect2( 300, 200, 100, 100 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 2 )
region = Rect2( 400, 200, 100, 100 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 2 )
region = Rect2( 500, 200, 100, 100 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 2 )
region = Rect2( 600, 200, 100, 100 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 2 )
region = Rect2( 700, 200, 100, 100 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 2 )
region = Rect2( 800, 200, 100, 100 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 2 )
region = Rect2( 900, 200, 100, 100 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 2 )
region = Rect2( 1000, 200, 100, 100 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 2 )
region = Rect2( 1100, 200, 100, 100 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 2 )
region = Rect2( 200, 100, 100, 100 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 2 )
region = Rect2( 300, 100, 100, 100 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 2 )
region = Rect2( 400, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 2 )
region = Rect2( 500, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 2 )
region = Rect2( 600, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 2 )
region = Rect2( 700, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 2 )
region = Rect2( 800, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 2 )
region = Rect2( 900, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 2 )
region = Rect2( 1000, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 2 )
region = Rect2( 1100, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 2 )
region = Rect2( 1200, 200, 100, 100 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 2 )
region = Rect2( 0, 100, 100, 100 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 2 )
region = Rect2( 100, 100, 100, 100 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 2 )
region = Rect2( 1200, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 2 )
region = Rect2( 1300, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 2 )
region = Rect2( 1400, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 2 )
region = Rect2( 1100, 100, 100, 100 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 2 )
region = Rect2( 1200, 100, 100, 100 )

[sub_resource type="SpriteFrames" id=34]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ) ],
"loop": true,
"name": "duck_ascend",
"speed": 15.0
}, {
"frames": [ SubResource( 6 ) ],
"loop": true,
"name": "duck_descend",
"speed": 15.0
}, {
"frames": [ SubResource( 7 ), SubResource( 7 ), SubResource( 7 ), SubResource( 7 ), SubResource( 7 ), SubResource( 7 ), SubResource( 7 ) ],
"loop": true,
"name": "duck_loop",
"speed": 5.0
}, {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 11 ), SubResource( 11 ), SubResource( 11 ), SubResource( 10 ) ],
"loop": true,
"name": "duck_attack",
"speed": 20.0
}, {
"frames": [ SubResource( 12 ), SubResource( 13 ) ],
"loop": true,
"name": "air_idle_down",
"speed": 7.0
}, {
"frames": [ SubResource( 14 ), SubResource( 15 ), SubResource( 15 ), SubResource( 16 ), SubResource( 16 ), SubResource( 17 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ) ],
"loop": false,
"name": "air_kick",
"speed": 20.0
}, {
"frames": [ SubResource( 20 ), SubResource( 21 ), SubResource( 21 ), SubResource( 21 ), SubResource( 22 ), SubResource( 22 ), SubResource( 23 ) ],
"loop": true,
"name": "punch",
"speed": 20.0
}, {
"frames": [ SubResource( 24 ), SubResource( 25 ) ],
"loop": true,
"name": "air_idle_up",
"speed": 7.0
}, {
"frames": [ SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ) ],
"loop": true,
"name": "run",
"speed": 15.0
}, {
"frames": [ SubResource( 38 ) ],
"loop": true,
"name": "wall_grab",
"speed": 5.0
}, {
"frames": [ SubResource( 36 ), SubResource( 37 ), SubResource( 36 ), SubResource( 37 ), SubResource( 36 ) ],
"loop": false,
"name": "dash",
"speed": 20.0
}, {
"frames": [ SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 41 ), SubResource( 41 ), SubResource( 41 ), SubResource( 41 ), SubResource( 41 ), SubResource( 41 ), SubResource( 40 ) ],
"loop": true,
"name": "super",
"speed": 5.0
}, {
"frames": [ SubResource( 42 ), SubResource( 43 ) ],
"loop": true,
"name": "charge",
"speed": 15.0
} ]

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 35 )

[node name="RayCast2DRight" type="RayCast2D" parent="."]
position = Vector2( 0, -0.970943 )
enabled = true
cast_to = Vector2( 10, 0 )

[node name="RayCast2DRight2" type="RayCast2D" parent="."]
position = Vector2( 0, -16.9709 )
enabled = true
cast_to = Vector2( 10, 0 )

[node name="RayCast2DLeft" type="RayCast2D" parent="."]
position = Vector2( 0, -0.970943 )
enabled = true
cast_to = Vector2( -10, 0 )

[node name="RayCast2DLeft2" type="RayCast2D" parent="."]
position = Vector2( 0, -16.9709 )
enabled = true
cast_to = Vector2( -10, 0 )

[node name="CPUParticles2D2" type="CPUParticles2D" parent="."]
position = Vector2( 2.50943, 0.358475 )
emitting = false
amount = 100
lifetime = 0.5
explosiveness = 0.23
emission_shape = 2
emission_rect_extents = Vector2( 6, 12 )
direction = Vector2( 0, -1 )
spread = 106.64
gravity = Vector2( 0, -80 )
initial_velocity = 20.0
initial_velocity_random = 0.19
angle = 720.0
angle_random = 0.33
scale_amount = 6.0
scale_amount_random = 0.42
scale_amount_curve = SubResource( 44 )
color_ramp = SubResource( 45 )

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -3 )
frames = SubResource( 34 )
animation = "charge"
playing = true

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
position = Vector2( 2.50943, 0.358475 )
emitting = false
amount = 150
lifetime = 0.7
lifetime_randomness = 0.23
emission_shape = 2
emission_rect_extents = Vector2( 6, 12 )
direction = Vector2( 0, -1 )
spread = 106.64
gravity = Vector2( 0, -60 )
initial_velocity = 90.0
initial_velocity_random = 0.19
angle = 720.0
angle_random = 0.33
scale_amount = 6.0
scale_amount_random = 0.42
scale_amount_curve = SubResource( 44 )
color_ramp = SubResource( 45 )

[node name="CPUParticles2D3" type="CPUParticles2D" parent="."]
position = Vector2( 2.50943, 0.358475 )
emitting = false
amount = 150
lifetime = 0.7
lifetime_randomness = 0.23
local_coords = false
emission_shape = 2
emission_rect_extents = Vector2( 6, 12 )
direction = Vector2( 0, -1 )
spread = 106.64
gravity = Vector2( 0, -60 )
initial_velocity = 90.0
initial_velocity_random = 0.19
angle = 720.0
angle_random = 0.33
scale_amount = 6.0
scale_amount_random = 0.42
scale_amount_curve = SubResource( 44 )
color_ramp = SubResource( 45 )

[node name="Label" type="Label" parent="."]
margin_left = -47.138
margin_top = -44.9528
margin_right = 49.862
margin_bottom = -30.9528
text = "grounded - idle"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="animation_finished" from="Sprite" to="." method="_on_Sprite_animation_finished"]
